# Cryptic_Mock-Crypto-Trading_v2

./: LICENSE  README.md  app.py  coin_api.py  database.py  pyproject.toml  requirements.txt
static/images/About_page/Images/: 9h2z333wsybwd4z0.avif
static/script/: dscript.js  script.js
static/styles/: dashboard.css  trade_page.css
templates/: about_page.html  dashboard.html  index.html  order.html  register_page.html  test.html  trade_page.html
