[tool.poetry]
name = "repl_nix_CrypticMock-Crypto-Tradingv2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
SQLAlchemy = "^2.0.20"
requests = "^2.31.0"
Flask-Htmldoom = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
